I got the home and away in HTML

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <title>Match Day Live</title>
   </head>
   <body>
-    <div class="scorebox">
+    <div class="container">
       <h1>Match Day</h1>
-      <div class=""
+      <div class="team-title">
+            <h4>Home</h4>
+            <h4 id="timer">32'</h4>
+            <h4>Away</h4>
+
     </div>
   </body>
 </html>
