I got the home and away in HTML

--- a/index.html
+++ b/index.html
@@ -9,12 +9,22 @@
     <title>Match Day Live</title>
   </head>
   <body>
+    <!-- I am going to put the match day in the middle and put 2 h4 in each corner. -->
     <div class="container">
       <h1>Match Day</h1>
       <div class="team-title">
             <h4>Home</h4>
             <h4 id="timer">32'</h4>
             <h4>Away</h4>
+        </div>
+        <!-- I'm going to put all this in the js file and css so i could style it an much more. -->
+        <div class= "team-title">
+            <div class= "team">
+
+
+        </div>
+        
+
 
     </div>
   </body>
