--- a/index.html
+++ b/index.html
@@ -9,23 +9,32 @@
     <title>Match Day Live</title>
   </head>
   <body>
-    <!-- I am going to put the match day in the middle and put 2 h4 in each corner. -->
+    <!-- I am going to put the match day in the middle and put 2 h4 in each corner by using css, and put the timer in the middle of home and away. -->
+    <!-- "container" , it puts all of my words in a box" -->
     <div class="container">
       <h1>Match Day</h1>
-      <div class="team-title">
-            <h4>Home</h4>
-            <h4 id="timer">32'</h4>
-            <h4>Away</h4>
+      <!-- "team-box" is a seprate box inside  of our big div that we put in teams and timer -->
+      <div class="teams-box">
+        <h4>Home</h4>
+        <h4 id="timer">32'</h4>
+        <h4>Away</h4>
+      </div>
+      <!-- we are going to create another box inside our big container div and get information on our home team name and img. -->
+      <div class="teams-box">
+        <div class="club">
+          <img src="" alt="" id="homeBadge" />
+          <p id="homeClub">Club Name</p>
         </div>
-        <!-- I'm going to put all this in the js file and css so i could style it an much more. -->
-        <div class= "team-title">
-            <div class= "team">
-
-
+        <p id="goals">5 - 3</p>
+        <!-- We repeat the code for the away name and badge picture inside of our div "team-box". -->
+        <div class="club">
+          <img src="" alt="" id="awayBadge" />
+          <p id="awayClub">Club Name</p>
         </div>
-        
+      </div>
+      <hr />
 
-
+      <div class="clubs-table" id="clubTable"></div>
     </div>
   </body>
 </html>
