--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- I am going to put the match day in the middle and put 2 h4 in each corner by using css, and put the timer in the middle of home and away. -->
     <!-- "container" , it puts all of my words in a box" -->
     <div class="container">
-      <h1>Match Day</h1>
+      <h1 class="matchz">Match Day</h1>
       <!-- "team-box" is a seprate box inside  of our big div that we put in teams and timer -->
       <div class="teams-box">
         <h4>Home</h4>
