adding style.css so my webpage could be centered

--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
       <!-- "team-box" is a seprate box inside  of our big div that we put in teams and timer -->
       <div class="teams-box">
         <h4>Home</h4>
-        <h4 id="timerz">32'</h4>
+        <h4 id="timerz"></h4>
+
         <h4>Away</h4>
       </div>
       <!-- we are going to create another box inside our big container div and get information on our home team name and img. -->
       <div id="template" class="teams-box">
+        <p class="timer"></p>
         <div class="club">
           <img src="" alt="" class="homeBadge" />
           <p class="homeClub">Club Name</p>
         </div>
         <p class="goals">5 - 3</p>
-        <p class= timer> 37'</p>
+
         <!-- We repeat the code for the away name and badge picture inside of our div "team-box". -->
         <div class="club">
           <img src="" alt="" class="awayBadge" />
           <p class="awayClub">Club Name</p>
         </div>
       </div>
-      <!-- <hr />
-
-      
+      <hr />
     </div>
   </body>
 </html>
